# outcome.wtf

./: .dockerignore  .env.example  .gitignore  Anchor.toml  Cargo.toml  DEMO.md  DEPLOY.md  Dockerfile  HACKATHON.md  SKILL.md  docker-compose.yml  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
api/: README.md
api/idl/: outcome_market.json
api/src/: builders.ts  indexer.ts  server.ts  solana.ts  validation.ts
hackathon/: BOUNTYBOARD_SOLANA_SPEC.md  FORUM_ACTIVITY_PLAN.md  FORUM_LOG.md  FORUM_POST_DRAFT.md  HEARTBEAT.md  MVP_ROADMAP.md  PLAN.md  PROGRESS_UPDATE_DAY1.md  README.md  STATUS.json  TEST_PLAN.md  forum_ideation_hot.json  forum_progress_hot.json  forum_team_formation_new.json  post_605_comments.json  post_608_comments.json  skill.md
programs/outcome_market/: Cargo.toml
programs/outcome_market/src/: lib.rs
scripts/: demo_flow.ts  encode_keypair.sh
tests/: outcome_market.ts
web/: docs.html  index.html  skill.md
