[package]
name = "outcome_market"
version = "0.1.0"
edition = "2021"

[lib]
name = "outcome_market"
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl = "0.31.0"

[features]
default = []
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
anchor-debug = []
custom-heap = []
custom-panic = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
